Задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,13 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+    <h1>H1</h1>
+    <h2>H2</h2>
+    <ol>
+        <li><a href="https://www.twitch.tv">twitch</a></li>
+        <li><a href="https://www.sports.ru/football">sports.ru</a></li>
+        <li><a href="https://www.google.com">google</a></li>
+    </ol>
+    </body>
 </html>
